# programacion-2

./: .gitignore
2025-2/sesion-de-clase-14/: CMakeLists.txt  RedSocial.cpp  RedSocial.h  Usuario.cpp  Usuario.h  main.cpp
2025-2/sesion-de-clase-14/Comparadores/: CompararEdad.h
2025-2/sesion-de-clase-14/Filtros/: FiltroEdad.h
2025-2/sesion-de-clase-15-herencia/: Album.cpp  Album.h  CMakeLists.txt  Foto.cpp  Foto.h  Historia.cpp  Historia.h  Publicacion.cpp  Publicacion.h  Reel.cpp  Reel.h  Registro.cpp  Registro.h  Usuario.cpp  Usuario.h  UsuarioEstandard.cpp  UsuarioEstandard.h  UsuarioVerificado.cpp  UsuarioVerificado.h  Video.cpp  Video.h
2025-2/sesion-de-clase-16/: CMakeLists.txt  Publicacion.cpp  Publicacion.h  RedSocial.cpp  RedSocial.h  Registro.cpp  Registro.h  Usuario.cpp  Usuario.h  UsuarioEstandard.cpp  UsuarioEstandard.h  UsuarioVerificado.cpp  UsuarioVerificado.h  main.cpp  usuarios.csv
2025-2/sesion-de-clase-16/Filtros/: FiltroEdad.cpp
2025-2/sesion-de-clase-18/: Alumno.cpp  Alumno.h  AlumnoRegular.cpp  CMakeLists.txt  Registro.cpp  Registro.h  main.cpp
2025-2/sesion-de-clase-20/: CMakeLists.txt  Cola.cpp  Cola.h  ColaPrioritaria.h  Lista.cpp  Nodo.cpp  PedidoRegular.h  Restaurante.h
2025-2/sesion-de-clase-21/: CMakeLists.txt  Cliente.cpp  Cola.h  Nodo.h  PedidoPrioridad.h  PedidoPrioritario.cpp  PedidoRegular.cpp  Pila.h  Restaurante.h  main.cpp
2025-2/sesion-de-clase-22-01/: Alumno.cpp  Alumno.h  AlumnoInfo.cpp  AlumnoInfo.h  AlumnoIntercambio.cpp  AlumnoIntercambio.h  AlumnoRegular.cpp  AlumnoRegular.h  CMakeLists.txt  ComparadorAlumnos.cpp  ComparadorAlumnos.h  Registro.cpp  SortOrder.cpp  SortOrder.h  Universidad.cpp  Universidad.h  alumnos.csv  alumnos2.csv
2026-1/capitulo-03/herencia/ejercicio02/: CMakeLists.txt  Clinica.cpp  Clinica.h  Persona.cpp  Persona.h  Registro.cpp  Registro.h  doctores.csv  funciones.h  main.cpp  pacientes.csv
2026-1/capitulo-03/herencia/ejercicio02/cita/: Cita.cpp  Cita.h  CitaPresencial.cpp  CitaPresencial.h  CitaVirtual.cpp  CitaVirtual.h
2026-1/capitulo-03/herencia/ejercicio02/doctor/: Doctor.cpp  Doctor.h  DoctorEspecialista.cpp  DoctorEspecialista.h  DoctorGeneral.cpp  DoctorGeneral.h
2026-1/capitulo-03/herencia/ejercicio02/paciente/: Paciente.cpp  Paciente.h  PacienteAsegurado.cpp  PacienteAsegurado.h  PacienteParticular.cpp  PacienteParticular.h
2026-1/capitulo-03/plantilla-de-clases/ejercicio01/: CMakeLists.txt  ColaPrioritaria.h  Lista.h  Mesero.h  Pedido.cpp  PedidoPrioritario.h  Restaurante.cpp  pedidos.csv
2026-1/capitulo-03/polimorfismo/ejercicio01/: Alumno.cpp  Alumno.h  AlumnoIntercambio.cpp  AlumnoIntercambio.h  AlumnoRegular.cpp  AlumnoRegular.h  CMakeLists.txt  Persona.cpp  Persona.h  Profesor.cpp  Profesor.h  funciones.cpp  funciones.h  main.cpp
2026-1/labs/LabEstantes/: Biblioteca.cpp  Biblioteca.h  CMakeLists.txt  Enciclopedia.cpp  Enciclopedia.h  Espacio.cpp  Espacio.h  Estante.cpp  Estante.h  EstanteHorizontal.cpp  EstanteHorizontal.h  EstanteVertical.cpp  EstanteVertical.h  Libro.cpp  Libro.h  Novela.cpp  Novela.h  estantes.csv  funciones.cpp  funciones.h  libros.csv  main.cpp
ArbolConListasPersona/: Arbol.cpp  Arbol.h  Nodo.cpp  Nodo.h  Persona.cpp
Capitulo 01 - ApplicacionUsoDeBibliotecaEstatica/: overloads.h
Capitulo 01 - IntroduccionPunteros/: myfunctions.h
Capitulo 01 - PlantillasDeFunciones/: main.cpp
Capitulo 02 - AsignacionExactaDeMemoria/: BibliotecaMemoriaExacta.cpp  BibliotecaMemoriaExacta.h
Capitulo 02 - PlataformaDeMusica/: artists.csv  platform.cpp  reporte-producción-musical.txt
Capitulo 02 - PlataformaDeMusicaPunteroAFuncion/: clients.csv  main.cpp  reporte-producción-musical.txt
Capitulo 03 - PlataformaDeMusicaOrientadoAObjetos/: AsignaMemoria.h  album.cpp  artist.h  artistproduction.cpp  client.cpp  main.cpp  platform.cpp  platform.h  playlists.csv  record.h  song.cpp  song.h
Capitulo 1 - IntroduccionPunteros/: ex3.cpp
Capitulo 2 - CadenasDeCaracteres/: MyString.cpp  MyString.h  Person.h
Capitulo2 - AsignacionDeMemoriaPorIncrementos/: main.cpp
Capitulo2 - AsignacionExactaDeMemoria/: main.cpp
Capitulo2 - LecturaDeCadenasDeCaracteres/: main.cpp  reports.cpp
Capitulo2 - PlataformaDeMusica/: main.cpp  platform.cpp  platform.h  structs.h  utils.cpp  utils.h
Capitulo2 - PlataformaDeMusicaPunteroAFuncion/: main.cpp  platform.cpp  platform.h  playlists.csv  utils.cpp  utils.h
Capitulo2 - PlataformaDeMusicaPunteroGenerico/: albums.csv  platform.cpp  platform.h
FunctionTemplates/: date.h  fraction.cpp  vector3d.h
FunctionsStaticLibrary/: fraction.h  templates.h
MyApp/: main.cpp
OperatorOverloading/: main.cpp  overloads.cpp  overloads.h
PolimorfismoFichas/: C.cpp  Nodo.cpp  Tablero.cpp
STL-List/: Persona.cpp
STL-Vector/: main.cpp
Sesion de clase 03 - ApplicacionDeUso/: main.cpp
Sesion de clase 10 - Puntero A Funcion/: main.cpp
Sesion de clase 11 - PunteroAFuncion/: genericlist.cpp  genericlist.h  main.cpp  structs.h
Sesion de clase 12 - ProgramacionOrientadaAObjetos/: ControladorRRHH.cpp  ControladorRRHH.h  Estudiante.cpp  Estudiante.h  Persona.cpp  Persona.h  Registro.h  main.cpp
Sesion de clase 14 - ProgramacionOrientadaObjetos/: ControladorRRHH.h  Estudiante.cpp  Estudiante.h  Persona.cpp  Persona.h  main.cpp
Sesion de clase 15 - ProgramacionOrientadaObjetos/: Cilindro.cpp  Cilindro.h  Circulo.cpp  Vector2D.cpp  Vector2D.h  main.cpp
Sesion de clase 16 - ProgramacionOrientadaObjetos/: clasea.h  claseb.cpp  claseb.h  clased.h  main.cpp
Sesion de clase 18 - ProgramacionOrientadaObjectos/: arreglo.cpp  (+12 more)
(+1029 files in other folders)
